# HW5-NW

./: README.md  main.py  pyproject.toml  scratchnotebook.ipynb
.github/workflows/: test.yml
.ipynb_checkpoints/: scratchnotebook-checkpoint.ipynb
align/: align.py
test/: test_align.py
